--- a/index.html
+++ b/index.html
@@ -1,188 +1,167 @@
-<!DOCTYPE html> <html lang="de"> <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="description" content="Das Jugendzentrum in Eglharting/Kirchseeon (JEK) - Nette Abende, Spiele, Getränke und mehr!">
-  <meta name="keywords" content="Jugendzentrum, JEK, Jugendzentrum-Eglharting-Kirchseeon">
-  <meta name="author" content="JEK">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>JEK Homepage Deutsch</title>
-  <link rel="icon" type="image/png" href="../pic/ico.png" sizes="32x32">
-  <meta http-equiv="expires" content="2419200"> <!-- Zwischenspeicherung dieser Website auf Proxy-Servern für 1 Monat -->
-  <!-- CSS -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> 
-  
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="description" content="Das Jugendzentrum in Eglharting/Kirchseeon (JEK) - Nette Abende, Spiele, Getränke und mehr!">
+    <meta name="keywords" content="Jugendzentrum, JEK, Jugendzentrum-Eglharting-Kirchseeon">
+    <meta name="author" content="JEK">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <title>JEK Homepage Deutsch</title>
+    <link rel="icon" type="image/png" href="../pic/ico.png" sizes="32x32">
+    <meta http-equiv="expires" content="2419200">
+    <!-- Zwischenspeicherung dieser Website auf Proxy-Servern für 1 Monat -->
+    <!-- CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   </head>
   <body>
-      
-        <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script src="../js/FormatGoogleCalendar-master/dist/format-google-calendar.js"></script>
-        <script>
-          formatGoogleCalendar.init({
-            calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/jugendtreffjek@gmail.com/events?key=AIzaSyCR3-ptjHE-_douJsn8o20oRwkxt-zHStY',
-            past: false,
-            upcoming: true,
-            pastTopN: 20,
-            upcomingTopN: 6,
-            itemsTagName: 'li',
-            upcomingSelector: '#events-upcoming',
-            pastSelector: '#events-past',
-            upcomingHeading: '<h2 class="teal-text text-lighten-2">Anstehende Treffen</h2>',
-            pastHeading: '',
-            format: ['<strong>', '*date*']
-          }); 
-        </script>
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
+    <nav class="white" role="navigation">
+      <div class="nav-wrapper container">
         <a id="logo-container" href="../" class="brand-logo"><b>JEK</b></a>
-      <ul class="right hide-on-med-and-down">
+        <ul class="right hide-on-med-and-down">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
-        	<li><a href="../prices" target="_blank">Getränke</a></li>
-          <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
-      </ul>
-      <ul id="nav-mobile" class="side-nav">
+          <li><a href="../prices" target="_blank">Getränke</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
-		      <li><a href="../prices" target="_blank">Getränke</a></li>
-          <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-  <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h2 class="header center teal-text text-lighten-2"><b>J</b>ugendzentrum <b>E</b>glharting-<b>K</b>irchseeon</h2>
-        <div class="row center">
-          <h5 class="header col s12 light">Alle Neuigkeiten, Öffnungszeiten und mehr findest du hier.</h5>
-        </div>
-        <div class="row center">
+          <li><a href="../prices" target="_blank">Getränke</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+    <div id="index-banner" class="parallax-container">
+      <div class="section no-pad-bot">
+        <div class="container">
+          <br><br>
+          <h2 class="header center teal-text text-lighten-2"><b>J</b>ugendzentrum <b>E</b>glharting-<b>K</b>irchseeon</h2>
+          <div class="row center">
+            <h5 class="header col s12 light">Alle Neuigkeiten, Öffnungszeiten und mehr findest du hier.</h5>
+          </div>
+          <div class="row center">
             <a href="https://calendar.google.com/calendar?cid=anVnZW5kdHJlZmZqZWtAZ21haWwuY29t" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Öffnungszeiten</a>
+          </div>
+          <br><br>
         </div>
-        <br><br>
+      </div>
+      <div class="parallax"><img src="../pic/jek2.jpg" alt="JEK"></div>
+    </div>
+    <div class="section">
+      <!-- Icon Section -->
+      <div class="container">
+        <div class="row">
+          <div class="col s12 m4">
+            <div>
+              <div class="icon-block">
+                <!-- Google Kalender Widget -->
+                <p class="left-align light">
+                  <!--<iframe src="https://calendar.google.com/calendar/embed?src=jugendtreffjek%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="350" height="450" frameborder="0" scrolling="no"></iframe>-->
+              </div>
+              <h2>Anstehende Treffen</h2>
+              <ul id="events-upcoming">
+              </ul>
+              </p>
+              <ul id="events-past">
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="parallax"><img src="../pic/jek2.jpg" alt="JEK"></div>
-  </div>
-  <div class="container">
-    <div class="section">
-      <!-- Icon Section -->
-      <div class="row">
-        <div class="col s12 m4">
-	<div>
-          <div class="icon-block">
-				  <!-- Google Kalender Widget -->   
-          			  <p class="left-align light">
-  			            <!--<iframe src="https://calendar.google.com/calendar/embed?src=jugendtreffjek%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="350" height="450" frameborder="0" scrolling="no"></iframe>-->    </div>
-            
-              <ul id="events-upcoming">
-                </ul></p>
-              <ul id="events-past">
-                </ul>
-
-
-        </div>
-        </div>
-        </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-      <!-- Icon Section -->
+    <section class="section">
+      <div class="container">
       <div class="row">
         <div class="col s12 m4">
           <div class="">
-        Im Jek wird dir folgendes geboten: <a href="../attractions.html">Attraktionen</a>.
+            <header>
+              <h2>Getränke</h2>
+            </header>
+            <div class="section-body">
+              <p>Body</p>
+            </div>
+          </div>
         </div>
-        </div>
-        </div>
+      </div>
+      </div>
+    </section>
     </div>
-  </div>
-
-  
-
-<!-- FAB - Floating Action Button (Icons hier: http://materializecss.com/icons.html) -->
-	
-	<div class="fixed-action-btn vertical">
-    <a class="btn-floating btn-large green">
+    <!-- FAB - Floating Action Button (Icons hier: http://materializecss.com/icons.html) -->
+    <div class="fixed-action-btn vertical">
+      <a class="btn-floating btn-large green">
       <i class="large material-icons">menu</i>
-    </a>
-    <ul>
-      <li><a class="btn-floating red" href="admin/" target="_blank"><i class="material-icons">vpn_key</i></a></li>
-    </ul>
-  </div>
-
-  <!-- Footer -->
-
+      </a>
+      <ul>
+        <li><a class="btn-floating red" href="admin/" target="_blank"><i class="material-icons">vpn_key</i></a></li>
+      </ul>
+    </div>
+    <!-- Footer -->
     <footer class="page-footer teal">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-           <h5 class="white-text">Vielen Dank</h5>
-           <p class="grey-text text-lighten-4">Besten Dank geht an unsere JEK Leiter für ihr ehrenamtliches Engagement<br>
-       Diese Website basiert auf der <a href="http://materializecss.com/templates/parallax-template/preview.html" target="_blank">Materialize (Parallax) Vorlage</a>.</p>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Jugendleiter</h5>
-          <ul>
-            <li><a class="white-text" href="../contact/fabian.html">Fabian Seitz</a></li>
-            <li><a class="white-text" href="../contact/kai.html">Kai Sissmeir</a></li>
-            <li><a class="white-text" href="../contact/flo.html">Flo Katholing</a></li>
-            <li><a class="white-text" href="../contact/adrian.html">Adrian Knorr</a></li>
-            <li><a class="white-text" href="../contact/maxi.html">Maxi Amann</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Ansprechpersonen aus Gemeinde</h5>
-          <ul>
-            <li><a class="white-text" href="http://www.kirchseeon.de/index.php?id=440,50">Marina Herceg</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
       <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Vielen Dank</h5>
+            <p class="grey-text text-lighten-4">Besten Dank geht an unsere JEK Leiter für ihr ehrenamtliches Engagement<br>
+              Diese Website basiert auf der <a href="http://materializecss.com/templates/parallax-template/preview.html" target="_blank">Materialize (Parallax) Vorlage</a>.
+            </p>
+          </div>
+          <div class="col l3 s12">
+            <h5 class="white-text">Jugendleiter</h5>
+            <ul>
+              <li><a class="white-text" href="../contact/fabian.html">Fabian Seitz</a></li>
+              <li><a class="white-text" href="../contact/kai.html">Kai Sissmeir</a></li>
+              <li><a class="white-text" href="../contact/flo.html">Flo Katholing</a></li>
+              <li><a class="white-text" href="../contact/adrian.html">Adrian Knorr</a></li>
+              <li><a class="white-text" href="../contact/maxi.html">Maxi Amann</a></li>
+            </ul>
+          </div>
+          <div class="col l3 s12">
+            <h5 class="white-text">Ansprechpersonen aus Gemeinde</h5>
+            <ul>
+              <li><a class="white-text" href="http://www.kirchseeon.de/index.php?id=440,50">Marina Herceg</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
           Erstellt von einem <b>JEK</b> Leiter
+        </div>
       </div>
-    </div>
-    <div class="footer-copyright text-center">
-      <div class="container text-center">
-        <a class="white-text text-left" href="../contact">Kontakt</a> | 
-        <a class="white-text text-left" href="../impressum">Impressum</a> | 
-        <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> | 
-        <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon</a>
+      <div class="footer-copyright text-center">
+        <div class="container text-center">
+          <a class="white-text text-left" href="../contact">Kontakt</a> |
+          <a class="white-text text-left" href="../impressum">Impressum</a> |
+          <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> |
+          <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon</a>
+        </div>
       </div>
-    </div>
-  </footer>
- 
-  <!-- Scripts-->
-
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="../js/materialize.js"></script>
-  <script src="../js/init.js"></script>
-  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script src="../js/FormatGoogleCalendar-master/dist/format-google-calendar.js">            
-    formatGoogleCalendar.init({
-      calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/jugendtreffjek@gmail.com/events?key=AIzaSyCR3-ptjHE-_douJsn8o20oRwkxt-zHStY',
-      past: true,
+    </footer>
+    <!-- Scripts-->
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="../js/materialize.js"></script>
+    <script src="../js/init.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="../js/FormatGoogleCalendar-master/dist/format-google-calendar.js"></script>
+    <script>
+      formatGoogleCalendar.init({
+        calendarUrl: 'https://www.googleapis.com/calendar/v3/calendars/jugendtreffjek@gmail.com/events?key=AIzaSyCR3-ptjHE-_douJsn8o20oRwkxt-zHStY',
+        past: false,
         upcoming: true,
         pastTopN: 20,
-        upcomingTopN: 3,
+        upcomingTopN: 6,
         itemsTagName: 'li',
         upcomingSelector: '#events-upcoming',
         pastSelector: '#events-past',
-        upcomingHeading: '<h2>Upcoming events</h2>',
-        pastHeading: '<h2>Past events</h2>',
-        format: ['<strong>', '*date*', '</strong>: ', '*summary*', ' &mdash; ', '*description*', ' in ', '*location*']
-
-    });
-  </script>
-
-  </body> </html>
+        upcomingHeading: '',
+        pastHeading: '',
+        format: ['<strong>', '*date*']
+      });
+    </script>
+  </body>
+</html>
