--- a/prices.html
+++ b/prices.html
@@ -10,7 +10,7 @@
   <!-- CSS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> 
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   </head>
   <body>
@@ -22,14 +22,12 @@
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
-          <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
-          <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
@@ -60,7 +58,9 @@
           <p class="left-align light">→ Energy Drink: 2€<br>
           <p class="left-align light">→ Bier (auch Radler, Russ): 1,5€<br>
           <p class="left-align light">→ Hugo (ganze Flasche): 2,5€<br>
-          <p class="left-align light">→ Hugo (Glas): 1€<br> <br><br>
+          <p class="left-align light">→ Hugo (Glas): 1€<br>
+          <p class="left-align light">→ Pizza: 2€<br>
+          <p class="left-align light">→ Pizzabaguette: 0,5€<br><br><br>
 
           <h4>Bezahlmethoden</h4>
           <h5>Barzahlung</h5>
@@ -79,7 +79,7 @@
   </div>
 
   <!-- Footer -->
-  
+
     <footer class="page-footer teal">
     <div class="container">
       <div class="row">
@@ -113,15 +113,15 @@
     </div>
     <div class="footer-copyright text-center">
       <div class="container text-center">
-        <a class="white-text text-left" href="../impressum">Impressum</a> | 
-        <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> | 
+        <a class="white-text text-left" href="../impressum">Impressum</a> |
+        <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> |
         <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon</a>
       </div>
     </div>
   </footer>
 
   <!-- Scripts-->
-  
+
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
